--- a/Rf.Common.Tests/Rf.Common.Tests.csproj
+++ b/Rf.Common.Tests/Rf.Common.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{E8D12CEA-6D80-4AC9-9E96-6EC3ADE32B3D}</ProjectGuid>
+    <ProjectGuid>{2E030E55-8988-42B3-8D4E-7B589D83771E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rf.Common</RootNamespace>
-    <AssemblyName>Rf.Common</AssemblyName>
+    <RootNamespace>Rf.Common.Tests</RootNamespace>
+    <AssemblyName>Rf.Common.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.5.0.2, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -45,11 +53,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractContext.cs" />
-    <Compile Include="ReflectionExtensions.cs" />
-    <Compile Include="IContext.cs" />
+    <Compile Include="AssertExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tuples.cs" />
+    <Compile Include="WhenContextIsUsed.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Rf.Common\Rf.Common.csproj">
+      <Project>{E8D12CEA-6D80-4AC9-9E96-6EC3ADE32B3D}</Project>
+      <Name>Rf.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
